--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cross-env": "^7.0.3",
     "cypress": "10.11.0",
     "cypress-multi-reporters": "1.6.2",
+    "jest": "^29.6.4",
     "jest-localstorage-mock": "2.4.26",
     "jsdom": "^21.1.0",
     "mocha": "10.2.0",
